# paralegal-sophia

./: .env  .env.example  .gitignore  README.md  agents-cli-manifest.yaml  gemini-agent.yaml  package.json  pyproject.toml  trigger.config.ts  tsconfig.json
agent/: Dockerfile  agent.py  main.py  requirements.txt
agent/tools/: case_db.py  corpus_search.py  docx_gen.py  laws_africa.py
app/: Dockerfile  agent.py  agent_runtime_app.py  cron.yaml  main.py  requirements.txt
app/.adk/: session.db
app/lib/: embeddings.py
app/tools/: case_db.py  corpus_search.py  docx_gen.py  supabase_writer.py  web_search.py
public/docs/: architecture.md
scripts/: embed_documents.py
src/: routeTree.gen.ts  styles.css
src/components/app/: AgentTab.tsx  ChatTab.tsx  LogEntryTab.tsx  SettingsTab.tsx
src/integrations/supabase/: types.ts
src/lib/: MarkdownRenderer.tsx
src/routes/: __root.tsx  app.tsx  auth.tsx  index.tsx  privacy.tsx  sitemap[.]xml.ts  terms.tsx
supabase/: config.toml
supabase/functions/_shared/: auth.ts  report.ts
supabase/functions/activity-report/: index.ts
supabase/functions/chat/: index.ts
supabase/functions/court-submission/: index.ts
supabase/functions/excel-export/: index.ts
supabase/functions/monthly-report/: index.ts
supabase/migrations/: 20260520140725_b2c8de1f-fd1d-46c0-bbe8-f67fe7fe17ab.sql
trigger/: index.ts
trigger/lib/: docx.ts  llm.ts  tools.ts
trigger/tasks/: embed-corpus.ts  ingest-agent.ts  ingest-chat.ts
