[project]
name = "sophia-paralegal"
version = "0.1.0"
description = "Sophia — an AI-powered Ugandan paralegal assistant built on Google ADK"
requires-python = ">=3.11"

dependencies = [
    "google-adk>=2.1.0",
    "google-cloud-aiplatform>=1.60.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "supabase>=2.4.0",
    "python-docx>=1.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]